[tool.poetry]
name = "auction-bot"
version = "0.1.0"
description = ""
authors = ["qellyka <qellyka@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.18.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.39"
psycopg = "^3.2.6"
psycopg-binary = "^3.2.6"
asyncpg = "^0.30.0"
yoomoney = "^0.1.2"
requests = "^2.32.3"
itsdangerous = "^2.2.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
